cambia DB a mysql y agregando Swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,8 @@
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#enabling the H2 console
-spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/clinica_odontologica?useSSL=false&serverTimeZone=UTC
+spring.datasource.name=clinica_odontologica
+spring.datasource.username=root
+spring.datasource.password=camrbdq12
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 server.port=8081
