--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
 		    <scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
 		   <groupId>org.springframework.boot</groupId>
 		   <artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
@@ -66,6 +71,11 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+           <dependency>
+		      <groupId>org.springdoc</groupId>
+		      <artifactId>springdoc-openapi-ui</artifactId>
+		      <version>1.5.11</version>
+		   </dependency>
 	</dependencies>
 
 	<build>
