cambiando la base de datos en la nube

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/clinica_odontologica?useSSL=false&serverTimeZone=UTC
+spring.datasource.url=mysql://bf59db71140936:3bf949ae@us-cdbr-east-04.cleardb.com/heroku_afc9d69b2bfd089?reconnect=true
 spring.datasource.name=clinica_odontologica
-spring.datasource.username=root
-spring.datasource.password=camrbdq12
+spring.datasource.username=bf59db71140936
+spring.datasource.password=3bf949ae
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 server.port=8081
