agregando swagger como home

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
+springdoc.swagger-ui.path=/
 spring.datasource.url=mysql://bf59db71140936:3bf949ae@us-cdbr-east-04.cleardb.com/heroku_afc9d69b2bfd089?reconnect=true
 spring.datasource.name=clinica_odontologica
 spring.datasource.username=bf59db71140936
